fixing gaps

--- a/src/components/FormItem/TitleForm/style.css
+++ b/src/components/FormItem/TitleForm/style.css
@@ -1,7 +1,7 @@
 .title{
     color: #4848BB;
     font-size:40px;
-    text-align: center;
+    text-align: right;
     margin-bottom:10px;
     font-weight:bold;
 }
