--- a/src/components/TextField/style.css
+++ b/src/components/TextField/style.css
@@ -1,8 +1,9 @@
 .field{
-    width:300px;
+    max-width:300px;
     height:30px;
     background-color: #fafafa;
     outline: none;
     border: none;
+    padding:5px;
     margin-bottom:10px;
 }
